--- a/stylesheet.css
+++ b/stylesheet.css
@@ -35,7 +35,7 @@
 		height: 100%;
 		border-radius: 5px;
 		position: absolute;
-		backface-visibility: hidden;
+		-webkit-backface-visibility: hidden;
 	}
 	#card-front {
 		background: #fff;
